# hix

./: .gitignore  404.html  CHANGELOG.md  COMMANDS.md  ChangeLog.md  LICENSE  Person.cs  README.md  default.hix  generate-grammar.json  hix.cabal  hix.config.sample.yaml  hix.config.yaml  index.html  mkdocs.yml  notes.md  package.yaml  setup.md  stack.yaml  template.cs.hix  test.txt  test_output.txt
.hixdrill/: cache.json
advanced/: index.html
app/: Main.hs
cli/: index.html
development/: index.html
docs/: advanced.md  bug-report-template.md  cli.md  development.md  drill-commands.md  drill-examples.md  drill-index.md  drill-installation.md  drill-output-format.md  drill-overview.md  drill-pattern-packs.md  drill-quickstart.md  feature-checklist.md  getting-started.md  git-conventions.md  grammar.md  index.md  missing-link.md  real-world-usecase.md  roadmap.md  specification.md  templates.md  usage.md
docs/examples/: config.yaml
docs/features/: _current.md  _current_item.md  bugfix_0.3.0.1.md  current_feature.md  epic.md  feat_0.3.0.0.md  feat_0.3.1.0.md  feat_0.3.3.0.md  feat_empty_template_file.md  feat_generate-help.md  feat_init-default-model.md  feat_model-property-metadata.md  feat_model-template-shortcut.md  feat_module-name-case-transformation.md  feat_output-path.md  feat_template-extension-in-filename.md  module_path_transformation.md  version_0.3.1.0.md
docs/issues/: issue_model_classname_in_prop_loop.md
docs/versions/: 0.3.0.0.md  0.3.0.1.md  0.3.0.2.md  0.3.5.0.md
drill/: Cargo.toml  README.md
drill/.hixdrill/: cache.json  facts.json
drill/src/: extractor.rs  facts.rs  init_writer.rs  main.rs  matcher.rs  pack.rs  pack_loader.rs  parser.rs  report.rs  scanner.rs  unknown_discovery.rs
drill/tests/: README.md  integration_test.rs
drill/tests/fixtures/sample-repo/golden/: facts.json  matches.json  project.json  report.json
drill/tests/fixtures/sample-repo/packs/test-pack/: pack.json  pattern.json
drill/tests/fixtures/sample-repo/src/: Person.cs  api.ts
drill/tests/fixtures/sample-repo/src/.hixdrill/: cache.json  matches.json  report.json  report.md  unknowns.json
feature-checklist/: index.html
getting-started/: index.html
grammar/: index.html
missing-link/: index.html
real-world-usecase/: index.html
roadmap/: index.html
sample/.hix/: .gitignore  Person.json  config.yaml
sample/.hix/templates/application/: Entity.hix
sample/.hix/templates/domain/: Model.hix
sample/.hix/templates/infrastructure/: Entity.hix
sample/.hix/templates/presentation/: Entity.hix
sample/Domain/: Person.cs  User.cs
sample/Presentation/: PersonController.cs  PersonView.cs  UserController.cs  UserView.cs
search/: search_index.json
specification/: index.html
src/: Config.hs  GrammarGen.hs  Help.hs  Lexer.hs  Lib.hs.old  Logging.hs  Model.hs  Renderer.hs  TemplateAST.hs  Wizard.hs
src/CLI/: Command.hs  Generate.hs  Help.hs  Runner.hs  Wizard.hs
src/Config/: Config.hs  ModuleTransform.hs
src/Grammar/: GrammarGen.hs
src/Model/: Model.hs
src/Template/: AST.hs  Lexer.hs  Parser.hs  RenderNode.hs  RenderProp.hs  Renderer.hs
templates/: index.html
test/: GenerateSpec.hs  HelpSpec.hs  ModelSpec.hs  ModuleTransformSpec.hs  ParserSpec.hs  Specs.hs  TemplateSpec.hs  WizardSpec.hs
test/Template/: ModuleTransformFilenameTest.hs  ModuleTransformQuickTest.hs  RenderNodeTest.hs
test/Transform/: TransformSpec.hs
test/data/: help.golden  man.golden  version.golden
test/data/cli/: config.yaml  expected.txt  model.json  template.hix
test/data/example/: expected.txt  model.json  template.hix
test/data/example/.hix/: log.txt
test/data/form/: expected.txt  model.json  template.hix
test/data/functions/: expected.txt  model.json  template.hix
test/data/ifelse/: expected.txt  model.json  template.hix
usage/: index.html
utils/installer/: hix-installer.iss
utils/packaging/: README.md  build-rpm.sh  hix.spec
utils/syntaxes/: hix-syntax-0.0.1.vsix  hix-syntax-0.0.2.vsix  hix-syntax-0.0.3.vsix  hix-syntax-0.0.4.vsix  hix-syntax-0.0.5.vsix  hix-syntax-0.0.6.vsix  hix-syntax-0.0.7.vsix  hix-syntax-0.0.8.vsix  package.json
