cabal-version:       2.2

name:                hix
version:             0.3.5.3

homepage:            https://github.com/githubuser/hix#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:
      CLI.Help
    , CLI.Wizard
    , Config.Config
    , Config.ModuleTransform
    , Grammar.GrammarGen
    , Model.Model
    , Template.AST
    , Template.Lexer
    , Template.Parser
    , Template.RenderNode
    , Template.RenderProp
    , Template.Renderer
  hs-source-dirs:      src
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , aeson-extra
    , text
    , bytestring
    , filepath
    , yaml
    , directory
    , containers
    , megaparsec >=9.0
  default-language:    Haskell2010

executable hix
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:
      base
    , hix
    , text
    , aeson
    , filepath
    , directory
    , containers
    , bytestring
    , megaparsec >=9.0
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints


test-suite hix-tests
  type:                exitcode-stdio-1.0
  main-is:             Specs.hs
  other-modules:
      HelpSpec
    , GenerateSpec
    , WizardSpec
    , ParserSpec
    , ModuleTransformSpec
    , Transform.TransformSpec
  hs-source-dirs:      test
  build-depends:
      base
    , hix
    , hspec
    , hspec-core
    , text
    , aeson
    , filepath
    , directory
    , yaml
    , unordered-containers
    , process
    , bytestring
    , silently
    , megaparsec >=9.0
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
