[package]
name = "hix-drill"
version = "0.1.0"
edition = "2021"
authors = ["Joel Bugarini"]
description = "CLI Codebase Analyzer for Hix"
license = "GPL-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
tree-sitter = "0.21"
